Some code smells are resolved